# hello-efi

./: .gitignore  def.h  libc.c  libc.h  libk.c  libk.h  main.c  noto.c  noto.h  run.sh
bytemap-gen/: Cargo.toml  bitmap
bytemap-gen/src/: main.rs
bytemaps/: .gitignore  Cargo.toml
bytemaps/src/: main.rs
