[package]
name = "bytemap-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
noto-sans-mono-bitmap = { version = "0.2.0", default-features = false, features = ["regular", "raster_heights_all", "unicode_ranges_default"] }
